#49 Fix table cog & overflow scroll

--- a/src/Cynosura.Template.Web.Ng/src/styles.scss
+++ b/src/Cynosura.Template.Web.Ng/src/styles.scss
@@ -16,31 +16,38 @@ $primary: mat.define-palette(mat.$indigo-palette);
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-regular.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-regular.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+
 /* ibm-plex-sans-600 - latin_cyrillic */
 @font-face {
   font-family: 'IBM Plex Sans';
   font-style: normal;
   font-weight: 600;
   src: local(''),
-       url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-600.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-600.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+
 /* ibm-plex-sans-700 - latin_cyrillic */
 @font-face {
   font-family: 'IBM Plex Sans';
   font-style: normal;
   font-weight: 700;
   src: local(''),
-       url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-700.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('assets/fonts/ibm-plex-sans-v8-latin_cyrillic-700.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-$custom-typography: mat.define-typography-config(
-  $font-family: 'IBM Plex Sans'
-);
+$custom-typography: mat.define-typography-config($font-family: 'IBM Plex Sans'
+  );
 
 @include mat.typography-hierarchy($custom-typography);
 @include mat.checkbox-typography($custom-typography);
@@ -51,7 +58,8 @@ body {
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -83,7 +91,7 @@ a {
   }
 }
 
-.mat-mdc-list-item > span > span {
+.mat-mdc-list-item>span>span {
   letter-spacing: 0;
 }
 
@@ -101,7 +109,8 @@ a {
   margin-right: 8px !important;
 }
 
-.mdc-card.mat-card-list, .mat-mdc-card.mdc-card.mat-card-view {
+.mdc-card.mat-card-list,
+.mat-mdc-card.mdc-card.mat-card-view {
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -112,6 +121,7 @@ a {
 
 .mat-mdc-card-header {
   padding: 0 !important;
+
   .mat-mdc-card-header-text {
     padding: 0 8px;
     margin: 0;
@@ -122,7 +132,7 @@ a {
   margin-bottom: 16px;
 }
 
-.mat-mdc-card-actions.mdc-card__actions  {
+.mat-mdc-card-actions.mdc-card__actions {
   display: block;
 
   .action-item {
@@ -148,20 +158,22 @@ a {
   padding: 20px;
 }
 
-.mat-mdc-card.mdc-card.mat-card-view  {
+.mat-mdc-card.mdc-card.mat-card-view {
   .field-view {
     margin-bottom: 1em;
 
-    > label {
+    >label {
       font-size: 12px;
       color: rgba(0, 0, 0, 0.54);
     }
   }
-  .mat-mdc-card-header, .mat-mdc-card-actions {
+
+  .mat-mdc-card-header,
+  .mat-mdc-card-actions {
     padding: 8px 0;
   }
-  
-  & > .mat-mdc-card-actions {
+
+  &>.mat-mdc-card-actions {
     display: flex;
     gap: 16px;
   }
@@ -177,12 +189,15 @@ a {
 
 .mat-mdc-table {
   width: 100%;
+
   .mat-mdc-header-row .mat-mdc-header-cell {
-    font-weight: 500; 
+    font-weight: 500;
     color: rgba(0, 0, 0, 0.54);
     font-size: 12px;
   }
-  .mat-mdc-header-cell:not(:last-of-type), .mat-mdc-cell:not(:last-of-type) {
+
+  .mat-mdc-header-cell:not(:last-of-type),
+  .mat-mdc-cell:not(:last-of-type) {
     padding-right: 8px;
   }
 
@@ -199,7 +214,8 @@ a {
   .mat-mdc-row {
     outline: 0;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       background: #f5f5f5;
     }
   }
@@ -207,6 +223,14 @@ a {
   .mat-mdc-row {
     cursor: pointer;
   }
+
+  .mat-column-action {
+    text-align: right;
+  }
+}
+
+.mat-mdc-card-content:has(>table.mat-mdc-table) {
+  overflow-x: scroll;
 }
 
 /*
@@ -219,7 +243,7 @@ a {
  */
 .mat-mdc-paginator {
   .mat-mdc-paginator-outer-container {
-    border-top: solid 1px rgba(0,0,0,.12);
+    border-top: solid 1px rgba(0, 0, 0, .12);
   }
 
   .mat-mdc-form-field.mat-mdc-paginator-page-size-select {
@@ -241,34 +265,39 @@ a {
 .mat-mdc-text-field-wrapper {
   padding: 0 !important;
 }
-.mat-mdc-form-field  {
+
+.mat-mdc-form-field {
 
   .mat-mdc-form-field-infix {
     padding-top: 24px 0 8px 0 !important;
   }
 
-  .mdc-floating-label.mat-mdc-floating-label  {
+  .mdc-floating-label.mat-mdc-floating-label {
     pointer-events: none;
-    & > * {
+
+    &>* {
       pointer-events: none;
     }
   }
 
   &.mat-form-field-hide-placeholder {
-    .mdc-floating-label.mat-mdc-floating-label  {
+    .mdc-floating-label.mat-mdc-floating-label {
       top: 37px;
     }
   }
 
   &.mat-focused {
-    .mdc-floating-label.mat-mdc-floating-label  {
+    .mdc-floating-label.mat-mdc-floating-label {
       top: 27px;
     }
   }
 }
 
-.mdc-text-field, .mdc-text-field:hover, .mdc-text-field.mdc-text-field--filled  {
+.mdc-text-field,
+.mdc-text-field:hover,
+.mdc-text-field.mdc-text-field--filled {
   background: transparent !important;
+
   .mat-mdc-form-field-focus-overlay {
     background: transparent !important;
   }
@@ -279,11 +308,12 @@ a {
  */
 
 .mat-mdc-dialog-container.mdc-dialog {
-  
+
   h1.mat-mdc-dialog-title {
     padding: 0;
     margin-bottom: 20px;
   }
+
   h1.mat-mdc-dialog-title::before {
     display: none;
   }
@@ -298,20 +328,20 @@ a {
     min-height: 68px;
   }
 
-  .mat-mdc-dialog-content.mat-dialog-content-edit   {
-  
+  .mat-mdc-dialog-content.mat-dialog-content-edit {
+
     form {
       display: flex;
       flex-direction: column;
       gap: 10px;
     }
-  
+
     .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
       display: none;
     }
   }
 
-  .mat-mdc-dialog-actions.mat-dialog-actions-edit  {
+  .mat-mdc-dialog-actions.mat-dialog-actions-edit {
     display: flex;
     flex-wrap: wrap;
     justify-content: right;
@@ -319,9 +349,10 @@ a {
     padding: 0;
   }
 }
+
 .mat-mdc-dialog-surface {
   padding: 24px;
-  
+
 }
 
 .owl-dt-container {
